--- a/app/views/user/payment.html
+++ b/app/views/user/payment.html
@@ -25,13 +25,13 @@
       <div class="col-sm-offset-11 col-sm-1">&nbsp;</div>
       <div class="col-md-12">
         <label>
-          As you may know our application is free, but in order to cover the costs of the application infrastructure, and for constant improvement
-          of the application, The Accountant needs your support.
+          Our application is free, but in order to cover the costs of the application infrastructure, and for constant improvement of the application,
+          The Accountant needs your support.
         </label>
       </div>
       <div class="col-md-12">
         <label>
-          You can contribute for application development buying the $ 4.99 licence. Thank you!
+          You can contribute for application development by donating $ 4.99. For this donation you will unlock Loans, Notifications and Category limit. Thank you!
         </label>
       </div>
       <div class="col-sm-offset-11 col-sm-1">&nbsp;</div>
@@ -50,12 +50,12 @@
       <div class="col-sm-offset-11 col-sm-1">&nbsp;</div>
       <div class="col-md-12">
         <label>
-          You have payed the $ 4.99 application license. Thank you for supporting The Accountant!
+          You've donated $ 4.99 to The Accountant. Thank you for supporting this application!
         </label>
       </div>
       <div class="col-md-12">
         <label>
-          We hope you enjoy using our application. For any inconvenience you can contact us at <i><a href="mailto:feedback.theacctnt@gmail.com">help.theacctnt@gmail.com</a>.</i>
+          For any inconvenience you can contact us at <i><a href="mailto:feedback.theacctnt@gmail.com">help.theacctnt@gmail.com</a>.</i>
         </label>
       </div>
       <div class="col-sm-offset-11 col-sm-1">&nbsp;</div>
