--- a/app/views/expense/add_expenses.html
+++ b/app/views/expense/add_expenses.html
@@ -37,7 +37,10 @@
       </div>
     </div>
     <div ng-repeat="expense in expensesArray">
-      <div class="form-group bordered-info" style="margin-left: 2px; margin-right: 2px">
+      <div class="form-group bordered-info" style="margin-left: 2px; margin-right: 2px; position: relative;">
+        <span ng-if="$index > 0" class="glyphicon glyphicon-remove text-danger" style="position: absolute; left: 5px; top: 5px; cursor: hand; cursor: pointer;"
+              ng-click="removeExpenseFromArray($index);">
+        </span>
         <label class="control-label col-sm-2" for="amount">Amount:</label>
         <div class="col-sm-4">
           <input type="number" step="any" class="form-control" id="amount" placeholder="Expense amount" ng-model="expense.amount" required >
