--- a/app/views/income/add_incomes.html
+++ b/app/views/income/add_incomes.html
@@ -30,7 +30,10 @@
       </div>
     </div>
     <div ng-repeat="income in incomesArray">
-      <div class="form-group bordered-info" style="margin-left: 2px; margin-right: 2px">
+      <div class="form-group bordered-info" style="margin-left: 2px; margin-right: 2px; position: relative;">
+        <span ng-if="$index > 0" class="glyphicon glyphicon-remove text-danger" style="position: absolute; left: 5px; top: 5px; cursor: hand; cursor: pointer;"
+              ng-click="removeIncomeFromArray($index);">
+        </span>
         <label class="control-label col-sm-2" for="amount">Amount:</label>
         <div class="col-sm-4">
           <input type="number" step="any" class="form-control" id="amount" placeholder="Income amount" ng-model="income.amount" required >
